Prevent tooltip page overflow

--- a/packages/perspective-viewer-d3fc/src/less/d3fc.less
+++ b/packages/perspective-viewer-d3fc/src/less/d3fc.less
@@ -49,6 +49,7 @@
         position: absolute;
         text-align: left;
         font-size: 10pt;
+        word-break: break-word;
         padding: 0.5em;
         background: var(--d3fc-tooltip--background, #ffffff);
         color: var(--d3fc-tooltip--color, black);
